# financial-organization

./: .gitignore  docker-compose.yml
backend/: .dockerignore  .env.sample  Makefile  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0f0a422be1f8_adding_tables.py  e988986d2e41_adding_expense_record_table.py
backend/docker/: Dockerfile
backend/docker/entrypoint/: entrypoint.sh
backend/src/: run_api.py
backend/src/financial_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/src/financial_app/: utils.py
backend/src/financial_app/api/: main.py
backend/src/financial_app/api/v1/: __init__.py  v1_router.py
backend/src/financial_app/api/v1/controllers/: category_controller.py  expense_record_controller.py  health_controller.py  subcategory_controller.py
backend/src/financial_app/api/v1/models/: dto_category.py  dto_expense_record.py  dto_responses.py  dto_subcategory.py
backend/src/financial_app/api/v1/repos/: category_repo.py  expense_record_repo.py  health_repo.py  subcategory_repo.py
backend/src/financial_app/api/v1/services/: category_service.py  exceptions.py  expense_record_service.py  health_service.py  subcategory_service.py
backend/src/financial_app/config/: config.py
backend/src/financial_app/db/: session.py
backend/src/financial_app/db/schemas/: __init__.py  schemas.py
backend/src/financial_app/db/scripts/: create_database.py  insert_initial_data.py
